<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="5dp"
        android:orientation="horizontal" >

        <!-- TOP LEVEL BUTTONS -->

        <Button
            android:id="@+id/ladiesTab"
            style="@style/styleServiceLadies"
            android:layout_width="@dimen/catBtnWi"
            android:layout_height="@dimen/catBtnHe"
            android:onClick="selectLadies"
            android:text="@string/ladies_tab_text"
            android:textSize="9sp" />

        <Button
            android:id="@+id/menTab"
            style="@style/styleServiceMen"
            android:layout_width="@dimen/catBtnWi"
            android:layout_height="@dimen/catBtnHe"
            android:onClick="selectMen"
            android:text="@string/men_tab_text"
            android:textSize="9sp" />

        <Button
            android:id="@+id/othersTab"
            style="@style/styleServiceOthers"
            android:layout_width="@dimen/catBtnWi"
            android:layout_height="@dimen/catBtnHe"
            android:onClick="selectOthers"
            android:text="@string/others_tab_text"
            android:textSize="9sp" />

        <Button
            android:id="@+id/houseTab"
            style="@style/styleServiceHouse"
            android:layout_width="@dimen/catBtnWi"
            android:layout_height="@dimen/catBtnHe"
            android:onClick="selectHouse"
            android:text="@string/house_tab_text"
            android:textSize="9sp" />
    </LinearLayout>

    <!-- VERTICAL LAYOUT WITH BUTTONS -->

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="2dp"
        android:background="@drawable/l_tabbg"
        android:orientation="vertical" >

        <!--
        <HorizontalScrollView
            android:id="@+id/itemsScrollView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="0dp"
            android:layout_marginTop="5dp" >

            <LinearLayout
                android:id="@+id/itemsLinearLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

               

            </LinearLayout>
        </HorizontalScrollView>
        -->
        <!-- will contain dynamically added items with icons and stuff here above -->

        <LinearLayout
            android:id="@+id/linearLayout1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/itemsScrollView"
            android:layout_marginLeft="0dp"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/dryCleanBtn"
                style="@style/styleService"
                android:layout_width="@dimen/serBtnWi"
                android:layout_height="@dimen/serBtnHe"
                android:onClick="selectOthers"
                android:text="@string/dry_wash_text"
                android:textSize="9sp" />

            <Button
                android:id="@+id/wetWashBtn"
                style="@style/styleService"
                android:layout_width="@dimen/serBtnWi"
                android:layout_height="@dimen/serBtnHe"
                android:onClick="selectOthers"
                android:text="@string/wet_wash_text"
                android:textSize="9sp" />

            <Button
                android:id="@+id/handWashBtn"
                style="@style/styleService"
                android:layout_width="@dimen/serBtnWi"
                android:layout_height="@dimen/serBtnHe"
                android:onClick="selectOthers"
                android:text="@string/hand_wash_text"
                android:textSize="9sp" />

            <Button
                android:id="@+id/pressWashBtn"
                style="@style/styleService"
                android:layout_width="@dimen/serBtnWi"
                android:layout_height="@dimen/serBtnHe"
                android:onClick="selectOthers"
                android:text="@string/press_wash_text"
                android:textSize="9sp" />
        </LinearLayout>

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_alignLeft="@+id/linearLayout1"
            android:layout_below="@+id/linearLayout1"
            android:src="@drawable/man_f_b" />

       <ListView
            android:id="@+id/sizeList"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:layout_below="@+id/linearLayout1"
            android:layout_toRightOf="@+id/imageView1" >
        </ListView>

        <ListView
            android:id="@+id/materialList"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:layout_below="@+id/linearLayout1"
            android:layout_toRightOf="@+id/sizeList" >
        </ListView>

        <ListView
            android:id="@+id/addOnList"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:layout_below="@+id/sizeList"
            android:layout_toRightOf="@+id/imageView1" >
        </ListView>

        <ListView
            android:id="@+id/othersList"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_below="@+id/materialList"
            android:layout_toRightOf="@+id/addOnList" >
        </ListView>
    </RelativeLayout>

</LinearLayout>